syntax = "proto3";

package webpspb;

service WebPsBackend {
  rpc List (ListRequest) returns (ListResponse);
}

message ListRequest {
}

message ListResponse {
  repeated Container container = 1;
}

message Container {
  string name = 1;
  string image = 2;
  string status = 3;

  map<string, string> docker_compose_labels = 4;
}
